--- a/src/Components/FormStyles.css
+++ b/src/Components/FormStyles.css
@@ -2,7 +2,7 @@ lebel {
     color: #fff;
 }
 
-form {
+.contact {
     display: flex;
     flex-direction: column;
     padding: 4rem 1rem;
@@ -10,7 +10,7 @@ form {
     max-width: 600px;
 }
 
-form input , form textarea {
+.contact input , .contact textarea {
     margin-bottom: 1rem;
     padding: 10px 18px;
     font-size: 1.2rem;
