--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,10 @@ body {
   background-color: #000;
 }
 
-h1,h4,p,a {
+h1,
+h4,
+p,
+a {
   color: #fff;
   text-decoration: none;
 }
@@ -28,9 +31,9 @@ ul {
   padding: 12px 32px;
   font-size: 1rem;
   text-transform: uppercase;
-  background-color: rgb(248,217,15);
+  background-color: rgb(248, 217, 15);
   color: #222;
-  border: 1px solid #fff ;
+  border: 1px solid #fff;
   font-weight: 6000;
   cursor: pointer;
 }
@@ -41,8 +44,22 @@ ul {
 }
 
 .btn:hover {
-  background: rgba(255,255,255,0.2);
+  background: rgba(255, 255, 255, 0.2);
   color: #fff;
   transition: 0.3s;
 }
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: yellow;
+}
